[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/Objects/ControlsUI.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Objects/Controls/ControlRight.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Sprites/UI/controls/controls_place.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/UI/controls/controls_background.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Objects/Controls/ControlJump.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Objects/Controls/ControlLeft.tscn" type="PackedScene" id=14]
[ext_resource path="res://Assets/Sprites/UI/controls/controls_background_top.png" type="Texture" id=15]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 64, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 32, 16, 64, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 32, 32, 64, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 168, 18 )

[node name="ControlsUI" type="Node2D"]
z_index = 1
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="BarBase" type="TextureRect" parent="."]
margin_top = 158.0
margin_right = 34.0
margin_bottom = 190.0
rect_scale = Vector2( 9.44, 1 )
texture = ExtResource( 6 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarSlots" type="NinePatchRect" parent="."]
margin_left = 96.0
margin_top = 158.0
margin_right = 224.0
margin_bottom = 190.0
texture = ExtResource( 15 )
patch_margin_left = 9
patch_margin_top = 10
patch_margin_right = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlJumpPos" type="Position2D" parent="."]
position = Vector2( 184, 170 )

[node name="RetrieveJump" type="TextureButton" parent="ControlJumpPos"]
margin_left = -32.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 8.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )
texture_hover = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlLeftPos" type="Position2D" parent="."]
position = Vector2( 112, 170 )

[node name="RetrieveLeft" type="TextureButton" parent="ControlLeftPos"]
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlRightPos" type="Position2D" parent="."]
position = Vector2( 136, 170 )

[node name="RetrieveRight" type="TextureButton" parent="ControlRightPos"]
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = SubResource( 7 )
texture_pressed = SubResource( 8 )
texture_hover = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlRight" parent="." instance=ExtResource( 2 )]
position = Vector2( 136, 170 )
control_type = 2

[node name="ControlLeft" parent="." instance=ExtResource( 14 )]
position = Vector2( 112, 170 )
control_type = 1

[node name="ControlJump" parent="." instance=ExtResource( 13 )]
position = Vector2( 184, 170 )

[node name="BarRetriever" type="KinematicBody2D" parent="."]
position = Vector2( 160, 178 )
collision_layer = 16
collision_mask = 2147483648

[node name="CollisionShape2D" type="CollisionShape2D" parent="BarRetriever"]
shape = SubResource( 10 )
[connection signal="pressed" from="ControlJumpPos/RetrieveJump" to="." method="_on_RetrieveJump_pressed"]
[connection signal="pressed" from="ControlLeftPos/RetrieveLeft" to="." method="_on_RetrieveLeft_pressed"]
[connection signal="pressed" from="ControlRightPos/RetrieveRight" to="." method="_on_RetrieveRight_pressed"]
[connection signal="place_in_world" from="ControlRight" to="." method="_on_Control_place_in_world"]
[connection signal="retrieve_from_world" from="ControlRight" to="." method="_on_Control_retrieve_from_world"]
[connection signal="place_in_world" from="ControlLeft" to="." method="_on_Control_place_in_world"]
[connection signal="retrieve_from_world" from="ControlLeft" to="." method="_on_Control_retrieve_from_world"]
[connection signal="place_in_world" from="ControlJump" to="." method="_on_Control_place_in_world"]
[connection signal="retrieve_from_world" from="ControlJump" to="." method="_on_Control_retrieve_from_world"]
